Mise à jour du code

--- a/blog_project/blog/templates/liste_articles.html
+++ b/blog_project/blog/templates/liste_articles.html
@@ -379,7 +379,7 @@
             <nav>
                 <a href="#">Accueil</a>
                 <a href="#">À propos</a>
-                <a href="#">Contact</a>
+                <a href="#contact">Contact</a>
             </nav>
             <i class="fas fa-moon theme-icon"></i>
         </div>
@@ -419,10 +419,9 @@
             </ul>
 
             <div class="social-links">
-                <a href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/yagali"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/nafou.gamaliel"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/gamalielyagali?igsh=aWM4c2gweGU4aXQ4"><i class="fab fa-instagram"></i></a>
             </div>
         </section>
 
